infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-game-2048
  namespace: eks-game-2048
spec:
  selector:
    app: eks-game-2048
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
