infra/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-game-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: 2024-eks-game
